# MaiFinaleToDX

./: .gitignore  Cargo.toml  config.example.toml  config.toml  consts.go  dxtouch.go  finaletouch.go  go.mod  go.sum  main.go  old_main.go.unused  pointerInfo.go  readme.md  touchInput.go
.github/workflows/: build.yml
dummyFinaleTouch/: go.mod  go.sum  main.go
jvs/: consts.go  finalejvs.go
keyboard/: consts.go  keyboard.go
src/: card_reader.rs  config.rs  helper_funcs.rs  jvs.rs  keyboard.rs  main.rs  packets.rs  touch.rs
src/packets/: rs232.rs  rs232c.rs
src/touch/: alls.rs  deluxe.rs  finale.rs  ringedge2.rs
touch/: consts.go  dxtouch.go  finaletouch.go
