[package]
name = "re2_to_alls_wrapper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
clap = { features = ["derive"] }
crossbeam-channel = "0.5.7"
toml = "0.7.3"
winapi = { version = "0.3.9", features = ["winuser"] }
serde = { version = "1.0.158", features = ["derive"] }
flexi_logger = "0.25.3"
log = "0.4.17"
clap-serde-derive = "0.2.0"
