[package]
name = "mai_finale_to_deluxe"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
toml = "0.8.9"
winapi = { version = "0.3.9", features = ["winuser", "timeapi"] }
serde = { version = "1.0.158", features = ["derive"] }
flexi_logger = "0.27.3"
log = "0.4.17"
clap-serde-derive = "0.2.0"
anyhow = "1.0.79"
serial2 = { version = "0.2.17", features = ["windows"] }
ctrlc = "3.4.2"
